--- a/frontend/tokenblood/package.json
+++ b/frontend/tokenblood/package.json
@@ -16,7 +16,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "pinia": "^3.0.1",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
