--- a/ai/Makefile
+++ b/ai/Makefile
@@ -2,6 +2,8 @@ check:
 	poetry run ruff format --line-length 120 .
 	poetry run ruff check --line-length 120 . --fix
 
-test:
-	poetry run ruff check --line-length 120 . 
 
+
+### Github Actions
+format:
+	poetry run ruff check --line-length 120 .
