--- a/ai/pyproject.toml
+++ b/ai/pyproject.toml
@@ -25,6 +25,7 @@ jupyter = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.11.6"
+pytest-xdist = "^3.6.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
