--- a/.github/workflows/ai-ci.yaml
+++ b/.github/workflows/ai-ci.yaml
@@ -24,7 +24,7 @@ jobs:
         id: poetry-cache
         uses: actions/cache@v4
         with:
-          path: .venv
+          path: ai/.venv
           key: poetry-ci-dependencies-${{ hashFiles('ai/**/poetry.lock') }}
       - name: Install dependencies
         run: poetry install --no-interaction --no-root
@@ -52,7 +52,7 @@ jobs:
         id: poetry-cache
         uses: actions/cache@v4
         with:
-          path: .venv
+          path: ai/.venv
           key: poetry-tests-dependencies-${{ hashFiles('ai/**/poetry.lock') }}
       - name: Install dependencies
         run: poetry install --no-interaction --no-root
