--- a/frontend/tokenblood/Dockerfile
+++ b/frontend/tokenblood/Dockerfile
@@ -1,5 +1,5 @@
 # build frontend
-FROM node:20-slim as build
+FROM node:20-slim AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci # install dependencies
