--- a/backend/Makefile
+++ b/backend/Makefile
@@ -7,7 +7,7 @@ run:
 check: 	
 	poetry run ruff format --line-length 120 .
 	poetry run ruff check --line-length 120 --fix .
-	poetry run pytest -v
+	poetry run pytest -v tests/
 
 
 
@@ -16,4 +16,4 @@ format:
 	poetry run ruff check --line-length 120 .
 
 test:
-	poetry run pytest -n 4 tests/
+	poetry run pytest -v tests/
