--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # project-specific
 db.sqlite
 .cursor/
-
+data/
+.DS_Store
+.vite
 # other
 .vscode/
+test.db
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
