--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   backend:
     build:
       context: .
-      dockerfile: backend/Dockerfile
+      dockerfile: Dockerfile
     env_file:
       - ./backend/.env
     networks:
@@ -12,7 +12,7 @@ services:
 
   frontend:
     build:
-      context: ./frontend/tokenblood
+      context: ./frontend
       dockerfile: Dockerfile
     ports:
       - "80:80"
