--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    server_name localhost;
+    listen [::]:80;
+    server_name localhost 35.208.210.30 tokenblood.com;
     root /usr/share/nginx/html;
     index index.html;
 
