--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,20 @@
 server {
     listen [::]:80;
     server_name localhost 35.208.210.30 tokenblood.com;
+    # Redirect all HTTP traffic to HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen [::]:443 ssl http2;
+    listen 443 ssl http2;
+    server_name localhost 35.208.210.30 tokenblood.com;
+
+    # SSL Configuration
+    # Replace with your actual certificate and key paths
+    ssl_certificate /etc/nginx/ssl/live/tokenblood.com/fullchain.pem; 
+    ssl_certificate_key /etc/nginx/ssl/live/tokenblood.com/privkey.pem; 
+
     root /usr/share/nginx/html;
     index index.html;
 
