--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,8 +6,9 @@ server {
 }
 
 server {
-    listen [::]:443 ssl http2;
-    listen 443 ssl http2;
+    listen [::]:443 ssl;
+    listen 443 ssl;
+    http2 on;
     server_name localhost 35.208.210.30 tokenblood.com;
 
     # SSL Configuration
