--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,21 +1,8 @@
 server {
     listen [::]:80;
+    listen 80;
     server_name localhost 35.208.210.30 tokenblood.com;
-    # Redirect all HTTP traffic to HTTPS
-    return 301 https://$host$request_uri;
-}
-
-server {
-    listen [::]:443 ssl;
-    listen 443 ssl;
-    http2 on;
-    server_name localhost 35.208.210.30 tokenblood.com;
-
-    # SSL Configuration
-    # Replace with your actual certificate and key paths
-    ssl_certificate /etc/nginx/ssl/live/tokenblood.com/fullchain.pem; 
-    ssl_certificate_key /etc/nginx/ssl/live/tokenblood.com/privkey.pem; 
-
+    
     root /usr/share/nginx/html;
     index index.html;
 
@@ -39,7 +26,7 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
-        add_header Cache-Control "no-cache";
+        add_header Cache-Control "no-cache"; # Ensure frontend fetches latest index.html
     }
 
     # Cache static assets
